@@ -1,3 +1,4 @@
+* Add rounding option to currency round
 * Allow rpc of compute of currency.currency
 
 Version 1.2.0 - 2009-04-20
